--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 torch~=2.3.0
 scipy~=1.14.1
-sklearn~=0.0.post9
 scikit-learn~=1.5.2
 transformers~=4.45.2
+numpy==1.26.0
+datasets
+pandas
+transformers
+tqdm
+huggingface_hub
