--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@ scipy~=1.14.0
 scikit-learn~=1.5.2
 transformers~=4.45.2
 numpy==1.26.0
-datasets
-pandas
-transformers
-tqdm
-huggingface_hub
-dotenv
+datasets~=3.4.1
+pandas~=2.2.3
+transformers~=4.45.2
+tqdm~=4.67.1
+huggingface_hub~=0.30.2
+dotenv~=0.9.9
 accelerate==1.6.0
 bitsandbytes==0.45.5
 tiktoken== 0.9.0
+sentencepiece~=0.2.0
