--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bitsandbytes==0.45.5; sys_platform == "linux"
 datasets~=3.4.1
 dotenv~=0.9.9
 huggingface_hub~=0.30.2
+huggingface_hub[hf_xet]
 numpy==1.26.0
 pandas~=2.2.3
 scikit-learn~=1.5.2
