--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,15 @@ huggingface_hub~=0.30.2
 huggingface_hub[hf_xet]
 numpy==1.26.0
 pandas~=2.2.3
+sentencepiece~=0.2.0
+seaborn~=0.13.2
 scikit-learn~=1.5.2
 scipy~=1.14.0
-sentencepiece~=0.2.0
 tiktoken== 0.9.0
 torch~=2.3.0
 transformers~=4.45.2
 tqdm~=4.67.1
+
 
 
 
